--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,5 +7,8 @@
 	<div class="article-body">
 		<%= @article.body %>
 	</div>
-	
+
+	<div class="article-footer">
+	<%= link_to "Edit Article", edit_article_path(@article), class:"btn btn-default btn-lg" %>	
+	</div>
 </article>
